V 1.2 with better controls and reduced difficulty
* new relative-controls similar to other similar games.
* increased player speed by 50%
* made special stages easier (slower, more spread out)
* the special 'split stage' won't spawn seeking blocks along the split
* the enemy's max simultaneous beams increases more gradually
* beams take longer to become harmful, and are harmful for less time, delivering less damage overall.
* added, then removed, a two player control scheme using on-screen buttons. Oops.
* made two player controls share the screen top-vs-bottom instead of left-vs-right. Much better idea.
* fixed a bug with player's maximum shake

--- a/SpaceOctopus/SpaceOctopus/Windows Copy of SpaceOctopus.csproj
+++ b/SpaceOctopus/SpaceOctopus/Windows Copy of SpaceOctopus.csproj
@@ -123,6 +123,7 @@
     <Content Include="example code.txt" />
     <Content Include="Game.ico" />
     <Content Include="TextFile1.txt" />
+    <Content Include="touch buttons code.txt" />
     <Content Include="to do.txt" />
   </ItemGroup>
   <ItemGroup>
