--- a/SpaceOctopus/SpaceOctopus/SpaceOctopus.csproj
+++ b/SpaceOctopus/SpaceOctopus/SpaceOctopus.csproj
@@ -128,6 +128,7 @@
     <Content Include="Game.ico" />
     <Content Include="TextFile1.txt" />
     <Content Include="to do.txt" />
+    <Content Include="touch buttons code.txt" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SpaceOctopusContent\SpaceOctopusContent.contentproj">
