--- a/SpaceOctopus/SpaceOctopus/SpaceOctopus.csproj
+++ b/SpaceOctopus/SpaceOctopus/SpaceOctopus.csproj
@@ -20,8 +20,7 @@
     <SilverlightManifestTemplate>Properties\AppManifest.xml</SilverlightManifestTemplate>
     <XnaWindowsPhoneManifestTemplate>Properties\WMAppManifest.xml</XnaWindowsPhoneManifestTemplate>
     <TileImage>Background.png</TileImage>
-    <TileTitle>
-    </TileTitle>
+    <TileTitle> </TileTitle>
     <ApplicationIcon>Game.ico</ApplicationIcon>
     <Thumbnail>GameThumbnail.png</Thumbnail>
     <GameStartupType>SpaceOctopus.SpaceOctGame</GameStartupType>
