Removed most text from the game (configure with Tweaking.lowTextMode) Cheats can now be enabled at runtime, not only at compile time Remapped cheat keys Added a new "todo 2013.txt" to do list.

--- a/SpaceOctopus/SpaceOctopus/SpaceOctopus2010.csproj
+++ b/SpaceOctopus/SpaceOctopus/SpaceOctopus2010.csproj
@@ -125,6 +125,7 @@
     <Content Include="GameThumbnail.png" />
     <Content Include="Game.ico" />
     <Content Include="code for drawing classic graphics.txt" />
+    <Content Include="todo 2013.txt" />
     <Content Include="to do.txt" />
   </ItemGroup>
   <ItemGroup>
@@ -191,7 +192,7 @@
     <None Include="Windows Copy of SpaceOctopus_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
-    <PublishFile Include="TextFile1.txt">
+    <PublishFile Include="to do.txt">
       <Visible>False</Visible>
       <Group>
       </Group>
@@ -201,7 +202,7 @@
       <IncludeHash>True</IncludeHash>
       <FileType>File</FileType>
     </PublishFile>
-    <PublishFile Include="to do.txt">
+    <PublishFile Include="todo 2013.txt">
       <Visible>False</Visible>
       <Group>
       </Group>
