Simplified special levels code, made some other changes and mess. Fixed cannon firing bug (by making cannon autofire, you cannot turn it off) Made spirit shots pierece through 10 enemies, not only 1 (to make it more obvious what they do) Started work on a new MessageType which displays images on screen, for the keyboard guide Moved the special stage code into its own file and massively simplified it. Special levels are much more hand-crafted, less generated, now. Removed now-unused code to show touch controls like the joystick added a levels.xml which doesn't do anything :/

--- a/SpaceOctopus/SpaceOctopus/SpaceOctopus2010.csproj
+++ b/SpaceOctopus/SpaceOctopus/SpaceOctopus2010.csproj
@@ -104,6 +104,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Special.cs" />
     <Compile Include="Data\Analytics.cs" />
     <Compile Include="BackgroundScreen.cs" />
     <Compile Include="OptionsMenuScreen.cs" />
